@@ -1,3 +1,7 @@
+iRedMail-0.9.6:
+    * Fixed issues:
+        - OpenBSD: not enable uwsgi service.
+
 iRedMail-0.9.5-1:
     * Fixed issues:
         - Postfix:
